Add CLI arg parsing and hook up crossterm event loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ path = "src/main.rs"
 
 
 [dependencies]
+crossterm = "0.25.0"
 time = { version = "0.3.13", features = ["local-offset", "formatting", "macros"] }
